# question-paper-generator

./: AGENTS.md  IMPLEMENTATION_PLAN.md  PRD.md  RAD - System design document .docx  README.md  review-1.md
backend/: .env  .gitignore  pyproject.toml  verify_gemini.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  documents.py  generation.py  papers.py  rag.py  subjects.py
backend/app/core/: config.py  security.py
backend/app/models/: document.py  paper.py  question.py  subject.py  user.py
backend/app/services/: ai_service.py  export_service.py  ocr_service.py  rag_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.jsx
frontend/src/components/: DeleteConfirmModal.jsx  ErrorBoundary.jsx  ExtractedTextPreview.jsx  FacultyAllocation.jsx  FileUpload.jsx  ProcessingStatus.jsx  ProtectedRoute.jsx  RegisterFaculty.jsx  StatsCard.jsx  SubjectCard.jsx  SubjectManagement.jsx
frontend/src/components/wizard/: ContentUploader.jsx  CustomInstructions.jsx  PreviewSummary.jsx  QuestionConfig.jsx  StepIndicator.jsx  UnitSelector.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  CreatePaper.jsx  FacultyDashboard.jsx  GeneratedPaper.jsx  Login.jsx  PapersList.jsx
frontend/src/services/: api.js  paperService.js
sql/: phase2_schema.sql  phase3_schema.sql  phase5_rag.sql  supabase_schema.sql
